welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
for (i <- 0 to nums.length-7) {
               ^island:8: error: not found: value nums
for (i <- 0 to nums.length-1) {
               ^island:13: error: not found: value nums
for (i <- 0 to nums.length-2) {
               ^island:18: error: not found: value nums
for (i <- 0 to nums.length-5) {
               ^