welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
var x=0
for (i <- 0 to nums.length-7) {
	if (( nums(i)==1  & nums(i+1)==1 & nums(i+2)==2 & nums(i+3)==2 & nums(i+4)==1 & nums(i+5)==1)){
		x=x+1	
	}	
}
for (i <- 0 to nums.length-1) {
	if (nums(i)==2){
		x=x+1	
	}	
}
for (i <- 0 to nums.length-2) {
	if (( nums(i)==2  & nums(i+1)==2)){
		x=x+1		
	}	
}
for (i <- 0 to nums.length-5) {
	

	if (( nums(i)==1  & nums(i+1)==2 & n nums(i+2)==1 & nums(i+3)==1)){
		x=x+1
		
	}
	
}
return x
}
